<resources>
    <string name="app_name">Ceylon Express</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CEYLON EXPRESS</string>
    <string name="nav_header_subtitle">www.ceylonexpress.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="Dont_have_Acc">Don\'t have an account?</string>
    <string name="username">User Name or Email</string>
    <string name="password">Password</string>
    <string name="forgetpasword">Forgot password?</string>
    <string name="uname">User Name</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="nicNumber">NIC Number</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="city">City</string>
    <string name="state">State/Country</string>
    <string name="postalCode">Postal code(eg: 10230)</string>
    <string name="letsgo">Let\'s Go</string>
    <string name="thankyou">Thank you</string>
    <string name="success">Your CEYLON EXPRESS account is successfully created!</string>
    <string name="title_activity_deals">deals</string>
    <string name="mobilenumber">Mobile Number (07X XXXXXXX)</string>
    <string name="reset">Reset</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="coupons">Coupons</string>
    <string name="wishlist">Wish list</string>
    <string name="toberev">To be reviewed</string>
    <string name="wallet">Wallet</string>
    <string name="qanda">Question and Answer</string>
    <string name="settings">Settings</string>
    <string name="tobeship">To be shipped</string>
    <string name="shipped">Shipped</string>
    <string name="help">Help Center</string>

</resources>
