<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/log_back"
    android:padding="10dp"
    tools:context=".Sign_In">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/logos"
        android:scaleType="fitCenter"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/thankyou"
        android:textSize="60dp"
        android:textColor="@color/colorText"
        android:gravity="center"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        >
       <TextView
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:background="@drawable/ic_done_black_24dp"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/success"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryText"
            android:gravity="center"
            android:fontFamily="sans-serif-thin"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_buttton"
                android:clickable="true"
                android:text="@string/letsgo"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:onClick="deals"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>