<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/log_back"
    android:padding="10dp"
    tools:context=".Sign_In">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/profile"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Tom Jerry"
            android:textSize="30dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            />
    </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_marginTop="250dp"
            android:layout_centerHorizontal="true"
            android:elevation="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryText"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_order_black_24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/orders"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textAllCaps="true"
                        android:layout_marginTop="10dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_shopping_cart_black_24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/cart"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textAllCaps="true"
                        android:layout_marginTop="10dp"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_coupons_black_24dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/coupons"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textAllCaps="true"
                        android:layout_marginTop="10dp"
                        />


                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

</LinearLayout>